# ancestry

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/deployment-env/: SKILL.md
config/annotation/: step.dev.yaml
config/download/: step.prod.yaml
config/face_annotation/: README.md  step.prod.yaml
config/face_crop/: step.dev.yaml  step.prod.yaml
config/face_recognition/: deepface.yaml  insightface.yaml  step.dev.yaml  step.prod.yaml
config/frame_crop/: canny.yaml  label_studio.xml  sam.yaml  saturation.yaml  step.dev.yaml  step.prod.yaml  step.smoke.yaml
config/gramps/: step.dev.yaml
deployment/: CLAUDE.md  Dockerfile.cuda-base  Dockerfile.job-cuda  Dockerfile.ssh  Dockerfile.ssh-cuda  entrypoint.ssh-cuda.sh  entrypoint.ssh.sh  sshd_config
deployment/k8s/: data-pvc.yml  kaniko-build-cuda-base-job.yml  kaniko-build-job-cuda.yml  kaniko-build-job.yml  secrets.example.yml
quickstart/: README.md
quickstart/data/curated/: photo_backs.csv
quickstart/data/state/: face_crop.json  face_recognition.json  frame_crop.json
scripts/: backfill_crop_sha256.py  fetch_quickstart_photos.py  fix_gramps_media_links.py  gramps_face_media.py  reconstruct_face_crops.py  reconstruct_frame_crops.py  setup_sam3.py  sync_private.py
scripts/deployment/: teardown.sh
scripts/deployment/jobs/: docker-push.sh  rerun-job.sh  run-step.sh
scripts/deployment/ssh/: podcopy.sh  pull-wandb-run.sh  pull-wandb-study.sh  (+1 more)
scripts/download/: import_local_downloads.py
scripts/face_recognition/: build_gt_review_tasks.py  coverage_report.py
scripts/frame_crop/: find_contours_demo.py
scripts/presentation/: analyze_hpopt_runs.py  data_quality.py  find_near_duplicates.py  person_sheets.py
scripts/quickstart/: build_gramps_export.py  compose_album_on_table.py
scripts/rotate/: check_exif_orientation.py  detect_rotated.py
scripts/viz/: hpopt_results.py
src/pipeline/: __main__.py
src/web/: README.md  app.py  config.py  family_tree.py  family_tree_graph.py  i18n.py  kinship.py  models.py  portraits.py  presenter.py  repository.py  serve.py  workflow.py
tests/: conftest.py  test_coordinate_space_integration.py
tests/download/: test_download_step.py
tests/face_crop/: test_step.py
tests/frame_crop/: conftest.py  test_cropper.py  test_geometry.py  test_processing.py  test_write_sidecar.py
tests/gramps/: conftest.py  test_export_preserves.py  test_gramps_step.py  test_media.py  test_plan.py  test_portraits.py  test_step.py  tree.gramps.template  tree_fixture.py
tests/shared/: test_paths.py  test_r2.py
tests/web/: test_i18n.py
(+241 files in other folders)
