[tool.uv]
package = true
# Baseline install is core (+dev) only. The feature groups below (web, annotation,
# experiments) are opt-in — locally via `uv run --group <name> ...` or a one-off
# `uv sync --group <name>`, and per-deployment via the job's own sync command.
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pipeline*", "web*"]

[project.scripts]
ancestry = "pipeline.__main__:main"
ancestry-download = "pipeline.download.step:run"
ancestry-rotate = "pipeline.rotate.step:run"
ancestry-frame-crop = "pipeline.frame_crop.step:run"
ancestry-label-studio = "pipeline.annotation.label_studio:main"
ancestry-face-annotation = "pipeline.annotation.face_annotation_cli:main"
ancestry-frame-crop-hpopt = "pipeline.experiments.frame_crop.run:main"
ancestry-face-crop = "pipeline.face_crop.step:run"
ancestry-face-crop-eval = "pipeline.experiments.face_crop.run:main"
ancestry-face-recognition = "pipeline.face_recognition.step:run"
ancestry-gramps = "pipeline.gramps.step:run"
ancestry-face-recognition-hpopt = "pipeline.experiments.face_recognition.run:main"
# ancestry-age-estimation = "pipeline.age_estimation.step:run"
ancestry-web = "web.serve:main"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
# The FastAPI photo viewer.
web = [
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "jinja2>=3.1.6",
]
# Label Studio
annotation = [
    "label-studio>=1.23.0",
]
# Hyperparameter search + reporting.
experiments = [
    "optuna>=4.9.0",
    "optuna-integration>=4.9.0",
    "wandb>=0.27.2",
    "codecarbon>=3.2.8",
    "pandas>=3.0.2",
]

[project]
name = "ancestry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# Core runtime — what the pipeline steps themselves import.
dependencies = [
    # huggingface_hub (a SAM3 dependency, installed out-of-band by
    # scripts/setup_sam3.py) requires click>=8.4.0. Without this floor the lock
    # pins an older click and the two installs ping-pong (uv sync downgrades,
    # setup_sam3's pip install re-upgrades) on every run.
    "click>=8.4.0",
    "pyzipper>=0.3.6",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "opencv-python>=4.13.0.92",
    "deepface>=0.0.100",
    "tf-keras>=2.21.0",
    "pillow>=12.2.0",
    "insightface>=1.0.1",
    "matplotlib>=3.11.0",
    "boto3>=1.43.6",
    "cryptography>=48.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

